   - OVSDB:
     * New unixctl command 'ovsdb-server/memory-trim-on-compaction on|off'.
       If turned on, ovsdb-server will try to reclaim all the unused memory
       after every DB compaction back to OS.  Disabled by default.
     * Maximum backlog on RAFT connections limited to 500 messages or 4GB.
       Once threshold reached, connection is dropped (and re-established).
   - DPDK:
     * Fixed support of 'net_virtio' devices.

v2.13.1 - 30 Jul 2020
---------------------
   - Bug fixes
   - DPDK:
     * OVS validated with DPDK 19.11.2, due to the inclusion of fixes for
       CVE-2020-10722, CVE-2020-10723, CVE-2020-10724, CVE-2020-10725 and
       CVE-2020-10726, this DPDK version is strongly recommended to be used.

v2.13.0 - 14 Feb 2020
---------------------
   - OVN:
     * OVN has been removed from this repository. It now exists as a
       separate project. You can find it at
       https://github.com/ovn-org/ovn.git
   - Userspace datapath:
     * Add option to enable, disable and query TCP sequence checking in
       conntrack.
     * Add support for conntrack zone limits.
     * Command "ovs-appctl dpctl/dump-flows" refactored to show subtable
       miniflow bits for userspace datapath.
   - AF_XDP:
     * New option 'use-need-wakeup' for netdev-afxdp to control enabling
       of corresponding 'need_wakeup' flag in AF_XDP rings.  Enabled by default
       if supported by libbpf.
     * 'xdpmode' option for netdev-afxdp renamed to 'xdp-mode'.
       Modes also updated.  New values:
         native-with-zerocopy  - former DRV
         native                - new one, DRV without zero-copy
         generic               - former SKB
         best-effort [default] - new one, chooses the best available from
                                 3 above modes
   - DPDK:
     * DPDK pdump packet capture support disabled by default. New configure
       option '--enable-dpdk-pdump' to enable it.